Docker/StudentValidations/third.py.out
  File "/app/StudentWork/StudentWork/third.py", line 1
    what am i doing here
         ^
SyntaxError: invalid syntax
Failed
